--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start:frontend": "react-scripts start",
-    "start:backend": "node server.js",
+    "start:client/client": "react-scripts start",
+    "start:server": "node server.js",
     "start": "concurrently \"npm run start:frontend\" \"npm run start:backend\""
   },
   "keywords": [],
