--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start:client/client": "react-scripts start",
+    "start:client": "react-scripts start",
     "start:server": "node server.js",
     "start": "concurrently \"npm run start:frontend\" \"npm run start:backend\""
   },
