--- a/client/package.json
+++ b/client/package.json
@@ -1,12 +1,21 @@
 {
-  "name": "techknowledgebase",
+  "name": "techknowledgebase_client",
   "version": "11.06.2024",
   "private": true,
   "dependencies": {
+    "@babel/plugin-transform-class-properties": "^7.24.7",
+    "@babel/plugin-transform-nullish-coalescing-operator": "^7.24.7",
+    "@babel/plugin-transform-numeric-separator": "^7.24.7",
+    "@babel/plugin-transform-optional-chaining": "^7.24.7",
+    "@babel/plugin-transform-private-methods": "^7.24.7",
+    "@babel/plugin-transform-react-jsx": "^7.24.7",
+    "@jridgewell/sourcemap-codec": "^1.4.15",
+    "@rollup/plugin-terser": "^0.4.4",
     "@testing-library/jest-dom": "^6.4.6",
     "@testing-library/react": "^16.0.0",
     "@testing-library/user-event": "^14.5.2",
     "customize-cra": "^1.0.0",
+    "eslint-config-react-app": "^7.0.1",
     "handlebars": "^4.7.8",
     "handlebars-loader": "^1.7.3",
     "latest": "^0.2.0",
@@ -16,14 +25,8 @@
     "react-native-mime-types": "^2.5.0",
     "react-router-dom": "^6.23.1",
     "react-scripts": "^5.0.1",
-    "web-vitals": "^4.1.1",
-    "@babel/plugin-transform-private-methods": "^7.24.7",
-    "@babel/plugin-transform-numeric-separator": "^7.24.7",
-    "@babel/plugin-transform-nullish-coalescing-operator": "^7.24.7",
-    "@babel/plugin-transform-class-properties": "^7.24.7",
-    "@babel/plugin-transform-optional-chaining": "^7.24.7",
-    "@jridgewell/sourcemap-codec": "^1.4.15",
-    "@rollup/plugin-terser": "^0.4.4"
+    "svgo": "^3.3.2",
+    "web-vitals": "^4.1.1"
   },
   "scripts": {
     "start": "react-app-rewired start",
